# OpenDesk

./: .gitignore  CODEX.md  Cargo.toml  Dockerfile  README.md  TASKS.md  compose.yml
docs/: adr.md  architecture.md  ci-plan.md  client-delivery.md  cutover-readiness.md  dev-validation.md  engineering-standards.md  feature-checklist.md  implementation-handoff.md  initial-tapeout.md  pro-feature-parity.md  requirements.md  research-closure-packets.md  research-findings.md  research-roadmap.md  research-status.md  software-stack.md  threat-model.md  traceability.md  upstream-findings.md  validation-lab.md  validation-matrix.md
migrations/: 001_initial.sql  002_tags.sql
scripts/: capture-verification-evidence.sh  dev-lxc-validate.sh  docs-check.sh  launch-seed-and-capture.sh  privacy-scan.sh  public-content-scan.sh  research-client-record.sh  research-deploy-capture-server.py  research-macos-client-record.sh  research-mobile-config-record.sh  research-network-probe.sh  research-windows-client-record.ps1  run-dev-lxc-validation.sh
src/: app_state.rs  auth.rs  config.rs  lib.rs  main.rs  time_format.rs
static/: app.css  app.js
templates/: backup.html  deployment.html  device_form.html  devices_list.html  enrollment_tokens.html  layout.html  login.html  server_config.html  sites.html  status.html  tags.html
tests/: backup_integration.rs  device_csv_export_integration.rs  devices_list_contract.rs  enrollment_integration.rs  integration_test.rs  notes_integration.rs  phases_1_2_4_integration.rs  research_closure_contract.rs  rustdesk_id_copy_integration.rs  (+2 more)
(+54 files in other folders)
