[package]
name = "opendesk"
version = "0.1.0"
edition = "2021"
description = "Self-hosted RustDesk OSS control plane"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
argon2 = "0.5"
askama = "0.12"

axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
cookie = "0.18"
hex = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate", "uuid", "time"] }
thiserror = "2"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[lib]
name = "opendesk"
path = "src/lib.rs"

[[bin]]
name = "opendesk"
path = "src/main.rs"